LayoutTests:

Reviewed by Geoff.

        Tests for http://bugs.webkit.org/show_bug.cgi?id=11876
        CSSMediaRule functions insertRule and deleteRule don't raise exceptions

        * fast/dom/css-mediarule-functions-expected.txt: Added.
        * fast/dom/css-mediarule-functions.html: Added.

WebCore:

        Reviewed by Geoff.

        Patch for http://bugs.webkit.org/show_bug.cgi?id=11876
        CSSMediaRule functions insertRule and deleteRule don't raise exceptions

        Test added:
        * fast/dom/css-mediarule-functions.html

        * bindings/js/kjs_css.cpp:
        (KJS::DOMCSSRuleFunc::callAsFunction):
        * css/CSSMediaRule.cpp: add exception handling
        (WebCore::CSSMediaRule::insertRule):
        (WebCore::CSSMediaRule::deleteRule):
        * css/CSSMediaRule.h: add ExceptionCode arguments
        * css/CSSMediaRule.idl: un-comment exceptions



Canonical link: https://commits.webkit.org/15449@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18404 268f45cc-cd09-0410-ab3c-d52691b4dbfc