WebCore/css/CSSMediaRule.h
@@ -4,6 +4,7 @@
  * (C) 1999-2003 Lars Knoll (knoll@kde.org)
  * (C) 2002-2003 Dirk Mueller (mueller@kde.org)
  * Copyright (C) 2002, 2006 Apple Computer, Inc.
+ * Copyright (C) 2006 Samuel Weinig (sam@webkit.org)
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Library General Public
@@ -32,6 +33,8 @@ namespace WebCore {
 class CSSRuleList;
 class MediaList;
 
+typedef int ExceptionCode;
+
 class CSSMediaRule : public CSSRule
 {
 public:
@@ -43,8 +46,8 @@ public:
     MediaList* media() const { return m_lstMedia.get(); }
     CSSRuleList* cssRules() { return m_lstCSSRules.get(); }
 
-    unsigned insertRule(const String& rule, unsigned index);
-    void deleteRule(unsigned index);
+    unsigned insertRule(const String& rule, unsigned index, ExceptionCode&);
+    void deleteRule(unsigned index, ExceptionCode&);
 
     virtual bool isMediaRule() { return true; }
     virtual String cssText() const;
